Boas vindas ao jogador e instrucoes

--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 
-    <title>Jogo Adivinha o número</title>
+    <title>Jogo Adivinha o Número</title>
 </head>
 <body>
     <h1>JOGO ADIVINHA O NÚMERO</h1>
-    <h2>Seja bem vindo!</h2>
-    <p>Qual é o seu nome?</p>
+    <h2>SEJA BEM VINDO!</h2>
+    <li>O jogador deverá escolher um número entre 0 e 100.</li>
+    <li>Após escolher o número o jogador será informado se acertou ou errou.</li>
+    <li>Se acertou será parabenizado e poderá reiniciar o jogo.</li>
+    <li>Se errou será informado se o número é maior ou menor que o número pensado.</li>
+    <li>O jogador terá 5 tentativas.</li>
     <input>
+    <button>Tentativa</button>
+    <input>
+    <button>Reiniciar</button>
+    
+    
 </body>
 </html>
