Implantando Lógica reiniciar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <input type="text" id="input-chute" required placeholder="CHUTE">
     <input type="submit" id="submit-tentativa" value="TENTATIVA">
     <input>
-    <button>Reiniciar</button>
+    <input type="submit" id="submit-reiniciar" value="REINICIAR">
     
     <script src="main.js"></script>
     
