Implementando Lógica das tentativas

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <label>Indique seu chute:</label>
     <input type="text" id="input-chute" required placeholder="CHUTE">
     <input type="submit" id="submit-tentativa" value="TENTATIVA">
-    <input>
+    <input type="text" id="input-numeroTentativas" value="0">
     <input type="submit" id="submit-reiniciar" value="REINICIAR">
     
     <script src="main.js"></script>
