--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     <li>O jogador deverá escolher um número entre 0 e 100.</li>
     <li>Após escolher o número o jogador será informado se acertou ou errou.</li>
     <li>Se acertou será parabenizado e poderá reiniciar o jogo.</li>
-    <li>Se errou será informado se o número é maior ou menor que o número pensado.</li>
+    <li>Se errou será informado se o número é maior ou menor que o número sorteado.</li>
     <li>O jogador terá 5 tentativas.</li><br>
 
-    <label>Indique seu chute:</label>
+    <h3>Indique seu chute:</h3>
     <input type="text" id="input-chute" required placeholder="CHUTE">
-    <input type="submit" id="submit-tentativa" value="TENTATIVA">
-    <input type="text" id="input-numeroTentativas" value="0">
-    <input type="submit" id="submit-reiniciar" value="REINICIAR">
+    <input type="submit" id="submit-tentativa" value="OK"><br>
+    <p id="p-numeroTentativas">NENHUMA TENTATIVA</p>
+    <p id="p-painel">VAMOS LÁ!</p>
+    <input type="submit" id="submit-reiniciar" value="RECOMEÇAR">
     
     <script src="main.js"></script>
     
