Extra: Boas vindas com o nome do jogador

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>JOGO ADIVINHA O NÚMERO</h1>
-    <h2>SEJA BEM VINDO!</h2>
+    <h2 id="bemvindo"></h2>
     <li>O jogador deverá escolher um número entre 0 e 100.</li>
     <li>Após escolher o número o jogador será informado se acertou ou errou.</li>
     <li>Se acertou será parabenizado e poderá reiniciar o jogo.</li>
